--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ out/
 
 # Gradle files
 .gradle/
+gradle/
+gradle.properties
+gradlew
+gradlew.bat
 build/
 
 # Local configuration file (sdk path, etc)
@@ -38,6 +42,7 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -83,3 +88,6 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+# OSX files
+.DS_Store
